--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,28 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- Primary Meta Tags -->
+    <title>Country Quiz</title>
+    <meta name="title" content="Country Quiz" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A fun online trivia game designed to test your geographical knowledge! Try this free quiz game to see how well you know countries around the world."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Country Quiz" />
+    <meta
+      property="og:description"
+      content="A fun online trivia game designed to test your geographical knowledge! Try this free quiz game to see how well you know countries around the world."
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Country Quiz" />
+    <meta
+      property="twitter:description"
+      content="A fun online trivia game designed to test your geographical knowledge! Try this free quiz game to see how well you know countries around the world."
     />
 
     <link
